--- a/lide/libor-flossler.html
+++ b/lide/libor-flossler.html
@@ -72,7 +72,7 @@
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-8bceeb30.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-635909d1.js"><title>Jan Zibner | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-635909d1.js"><title>Libor Flössler | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -110,8 +110,8 @@
 <section class="relative mx-auto py-6 sm:py-10 px-6 max-w-7xl text-custom-darkpurple"><div class="mb-6 uppercase text-gray-500"><a href="/"><i class="fa-solid fa-arrow-left"></i> Zpět</a></div>
     <div class="sm:flex gap-10 mt-4"><div>
 
-<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/jan-zibner-twitter.jpg)"></div></div></div></div>
+<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg)"></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg)"></div></div></div></div>
 
 
 
@@ -124,15 +124,16 @@
 
 </div>
       <div class="mt-4 sm:mt-0"><div class="mb-4 text-md uppercase">Přednášející</div>
-        <h1 class="text-2xl font-bold">Jan Zibner 🇨🇿</h1>
+        <h1 class="text-2xl font-bold">Libor Flössler 🇨🇿</h1>
+        <div class="mt-1"><span class="text-xs">aka</span>
+            <span class="font-bold">Investocka</span></div>
         
-        <div class="mt-4 text-custom-darkpurple italic"><p>Právník se specializací na právo duševního vlastnictví a digitální trendy</p></div>
-        <div class="mt-4 text-custom-darkpurple links"><p>CLO &amp; spoluzakladatel <a href="https://www.artiffine.com/" class="underline hover:no-underline" target="_blank">Artiffine</a></p></div>
-        <div class="mt-4">Sekce: NFTs/Metaverse</div>
-        <div class="mt-2">Twitter: <a rel="noreferrer" href="https://twitter.com/artiffine" target="_blank" class="font-bold">@artiffine</a></div>
+        <div class="mt-4 text-custom-darkpurple links"><p>YT kanál <a href="https://www.youtube.com/c/Investocka" class="underline hover:no-underline" target="_blank">Investocka</a>, investiční deskovka <a href="https://www.vyhrejzivot.cz/" class="underline hover:no-underline" target="_blank">Vyhrej Život</a></p></div>
+        <div class="mt-4">Sekce: Základy</div>
+        <div class="mt-2">Twitter: <a rel="noreferrer" href="https://twitter.com/investocka" target="_blank" class="font-bold">@investocka</a></div>
         
-        </div></div>
-    <div class="mt-6 utxo-markdown"><p>JUDr., Ph.D. IT/IP právník se specializací na právo duševního vlastnictví a digitální trendy, aktuálně jako CLO &amp; Co-founder projektu Artiffine</p></div>
+        <div class="mt-2">Web: <a href="https://vyhrejzivot.cz" target="_blank" rel="noreferrer" class="font-bold">vyhrejzivot.cz</a></div></div></div>
+    <div class="mt-6 utxo-markdown"><p>YT kanál Investocka. Autor české investiční deskovky Vyhrej Život. Investor</p></div>
     <div class="mt-6"><h2 class="uppercase mb-4 text-md">Události (0)</h2>
       <div>Tento člověk zatím nemá v programu žádnou událost.</div></div></section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
@@ -155,13 +156,13 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vtrdt7">
+		<script type="module" data-sveltekit-hydrate="u0545g">
 			import { start } from "../_app/immutable/start-90295b91.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vtrdt7"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="u0545g"]').parentNode,
 				version: "1678452679124",
 				hydrate: {
 					node_ids: [0, 7],
